branch-out-commit

--- a/index1.html
+++ b/index1.html
@@ -21,6 +21,8 @@
 
 <div class="header">
 	<h1>i am competition</h1>
+	<h2>we are competition</h2>
+	<h3>on est la competition</h3>
 	<h2>welcome aboard</h2>
 </div>
 
